--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href= "navbar.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
     <title>Welcome to Horiseon</title>
@@ -11,14 +12,22 @@
 
 <body>
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul> 
-                <li> <a href="#search-engine-optimization" class="float-left">Search Engine Optimization</a></li> 
-                <li> <a href="#online-reputation-management" class="float-left"> Online Reputation Management</a></li>
-                <li><a href="#social-media-marketing" class="float-rleft"> Social Media Marketing</a></li>
-            </ul>
-        </div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Hori<span class="seo">seo</span>n</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                  <ul class="navbar-nav">
+                  <ul>
+                              <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                              <li> <a href="#online-reputation-management">Online Reputation Management</a></li>
+                              <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+                          </ul>
+                  </ul>
+                </div>
+              </nav>
+        
     </div>
 
     <div class="hero"></div>
