added a line to index.html

--- a/hm2/index.html
+++ b/hm2/index.html
@@ -27,16 +27,25 @@
           </ul>
         </div>
       </nav>
-
+        
       <div class="container"> 
         <div class = "row">
-          <div class = "col-md-6">
-          <h1> About us!</h1>
-          <img src="m2logo.jpg" alt="..." class="img-thumbnail">
+          <div class = "col-md-12">
+          <h1> <strong>About us!</strong></h1>
+          <hr class = "my-3">
+          </div>
+          <br>
+          <div class = "col-md-3">
+          <img src="m2logo.jpg" alt="Mastimanialogo" class="img-thumbnail">
+          </div>
+
+          <div class = "col-md-8">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique odit tempora nulla, pariatur dolore voluptatibus, architecto aperiam aliquid, asperiores aliquam expedita incidunt dolor neque distinctio consequatur tenetur voluptates ratione. Ab.</p>
+          <br>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique odit tempora nulla, pariatur dolore voluptatibus, architecto aperiam aliquid, asperiores aliquam expedita incidunt dolor neque distinctio consequatur tenetur voluptates ratione. Ab.</p>
+          </div>
         </div>
-        </div>
+      </div>
 
 
 
