made changed to html and css

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </head>
 
 <body>
-    <div>
-        <div class= "header">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#">Hori<span class="seo">seo</span>n</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -28,12 +27,14 @@
                   </ul>
                 </div>
               </nav>
-   
-    </div>
+        </header>
 
-    <div class="hero"></div>
+        <div class="hero">
+            <img class = "digital" src="assets\digital-marketing-meeting.jpg" alt="a meeting">
+        </div>
     
-    <div class="content">
+
+    <main>
         <section class="search-engine-optimization">
             <img src="assets\search-engine-optimization.jpg" alt="a book about search engine optimization book alongwith laptop coffee and pens" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -55,7 +56,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
-    </div>
+    </main>
 
     <div class="benefits">
         <section class="benefit-lead">
