--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--added bootstrap link for the Nav bar, in this html-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-
+    <!-- changed the title <extar-->
     <title>Welcome to Horiseon</title>
 </head>
 
-<body>
+<body>  
+        <!--Removed header class with header element -->
         <header>
+        <!-- added Nav bar-->
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#">Hori<span class="seo">seo</span>n</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,11 +33,12 @@
         </header>
 
         <div class="hero">
+            <!-- added image class tag to size the image to fit the screen-->
             <img class = "digital" src="assets\digital-marketing-meeting.jpg" alt="a meeting">
         </div>
     
 
-    <main>
+    <main> <!--Replaced div to main!! This the beginning of the main setion of the page -->
         <section class="search-engine-optimization">
             <img src="assets\search-engine-optimization.jpg" alt="a book about search engine optimization book alongwith laptop coffee and pens" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -58,8 +62,8 @@
         </section>
     </main>
 
-    <div class="benefits">
-        <section class="benefit-lead">
+    <div class="benefits"><!-- added sections under this class-->
+        <section class="benefit-lead"> 
             <h3>Lead Generation</h3>
             <img class= "images" src="assets\lead-generation.png" alt="down arrow directing towards dollar sign" />
             <p>
@@ -83,7 +87,7 @@
 
     </div>
 
-    <footer>
+    <footer> <!-- made this element a footer-->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
