made a few css changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
 
     <main> <!--Replaced div to main!! This the beginning of the main setion of the page -->
-        <section class="search-engine-optimization">
+        <section id="online-reputation-management" class="search-engine-optimization">
             <img src="assets\search-engine-optimization.jpg" alt="a book about search engine optimization book alongwith laptop coffee and pens" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
