updated Css and html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
 
     <main> <!--Replaced div to main!! This the beginning of the main setion of the page -->
-        <section id="online-reputation-management" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="assets\search-engine-optimization.jpg" alt="a book about search engine optimization book alongwith laptop coffee and pens" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -63,21 +63,21 @@
     </main>
 
     <div class="benefits"><!-- added sections under this class-->
-        <section class="benefit-lead"> 
+        <section class="benefit-section"> 
             <h3>Lead Generation</h3>
             <img class= "images" src="assets\lead-generation.png" alt="down arrow directing towards dollar sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit-section">
             <h3>Brand Awareness</h3>
             <img class= "images"src="assets\brand-awareness.png" alt="light bulb reflecting light" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit-section">
             <h3>Cost Management</h3>
             <img class= "images" src="assets\cost-management.png" alt="coins with tools"></img>
             <p>
